# kitty-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: script_update_model_metadata_table.py
src/kitty/: __init__.py  __main__.py  bridge_runner.py  cloudflare.py  types.py  validation.py
tests/: conftest.py  test_balancing_resolver.py  test_balancing_schema.py  test_balancing_store.py  test_bridge_mode.py  test_claude_settings_api_key.py  test_claude_settings_override.py  test_cli_log_file.py  test_cli_main.py  test_cli_router.py  test_credential_store.py  test_debug_log_path.py  test_doctor_cmd.py  test_exit_code_mapping.py  test_gemini_protocol.py  test_gemini_translator.py  test_github_actions.py  test_integration.py  test_kilo_config.py  test_kilo_protocol.py  test_launch_orchestrator.py  test_launcher_base.py  test_launcher_claude.py  test_launcher_codex.py  test_launcher_discovery.py  test_model_context.py  test_profile_resolver.py  test_profile_schema.py  test_profile_store.py  test_provider_anthropic.py  test_provider_azure.py  test_provider_base.py  test_provider_bedrock.py  test_provider_byteplus.py  test_provider_custom_anthropic.py  test_provider_custom_openai.py  test_provider_fireworks.py  test_provider_google_aistudio.py  test_provider_kimi.py  test_provider_list_sync.py  (+14 more)
tests/auth/: test_oauth_session.py  test_openai_oauth.py  test_pkce.py
tests/bridge/: test_access_logging.py  test_all_backends_unhealthy.py  test_all_protocol_routing.py  test_api_key_auth.py  test_balancing_server.py  test_bridge_config.py  test_bridge_engine.py  test_bridge_management.py  test_bridge_server.py  test_bridge_server_anthropic.py  test_bridge_server_bedrock.py  test_bridge_server_claude_e2e.py  test_bridge_server_kilo.py  test_bridge_server_minimax_token.py  test_bridge_server_zai_anthropic.py  test_bridge_state.py  test_circuit_breaker.py  test_cloudflare_thrash.py  test_compaction.py  test_concurrent_backend_selection.py  test_connection_retries.py  test_crash_resilience.py  test_deferred_stream_response.py  test_empty_response_retry.py  test_host_port_config.py  test_messages_events.py  (+19 more)
(+88 files in other folders)
